# bassoon

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  bassoon.h  binary_data.hpp  bson.h  bson.hpp  decoder.hpp  endian.hpp  foo.cpp  travis.yml
lib/cmake/: BuildGTest.cmake  FullRPath.cmake
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/bassoon/: CMakeLists.txt  abstract_encoder.hpp  array_encoder.hpp  array_writer.hpp  bassoon.h  bassoon.hpp  binary_data.hpp  bson.h  bson.hpp  concrete_encoder.hpp  config.cpp  config.h.in  config.hpp.in  debug.cpp  debug.hpp  decoder.hpp  document_data.hpp  encoder.hpp  encoder_interface.hpp  endian.hpp  linear_cursor.hpp  string_data.hpp
src/test/: CMakeLists.txt  test_config.cpp  test_encode_hello_world.cpp
